# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CMakeDemo-config.cmake  FindCMakeDemo.cmake
include/: CMakeLists.txt  source_file.hpp
src/: CMakeLists.txt  source_file.cpp
tests/: CMakeLists.txt  test_cmake_demo.cpp
